# Automated-Edge-Discovery

./: .gitignore  .review_check.py  .review_check.sh  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
aed_lifecycle/: __init__.py  checkpoint.py  no_stall.py  watchdog.py
aed_policy/: __init__.py  action_types.py  decisions.py  policy.py  reporting.py  run_state.py
automated_edge_discovery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
corpus/: autocoder-real-output-v0.json  codex-remediation-pr314-320.json  codex-remediation-wave2-pr314-320.json  corpus-001.json
docs/: PR_DESCRIPTION.md  README.md  adversarial_governance_contract_review_2026_05_04.md  aed_continue_pr.md  aed_executor_packet_usage.md  aed_known_safe_command_cookbook.md  aed_lifecycle_state_registry.md  aed_tasker_executor_design.md  aed_tasker_packet_usage.md  aed_whole_workflow_operator_path.md  apply_tool_direct_main_process_gap_3841710.md  architecture.md  autocoder_architecture_audit_2026_05.md  autocoder_autonomy_roadmap.md  autocoder_batch_controller_design.md  autocoder_engineering_handbook.md  autocoder_eval_corpus_design.md  autocoder_real_output_eval_results_v0.md  autocoder_real_output_result_packet_builder_v0.md  autocoder_result_packet_emission_v0.md  autocoder_roadmap.md  autocoder_run_controller_v0.md  autocoder_run_summary_v1.md  autocoder_single_task_controller_design.md  autonomy_friction_log.md  claude_worker_handoff_v1.md  codex_global_notes_inventory.md  codex_note_retrospective_audit_pr314_320.md  current_project_status.md  (+80 more)
(+512 files in other folders)
